add our own tests as a starting point

--- a/seed/templates/_test/_seed-element-basic.html
+++ b/seed/templates/_test/_seed-element-basic.html
@@ -17,29 +17,67 @@
   <<%= elementName %> id="fixture"></<%= elementName %>>
 
   <script>
-    var myEl = document.getElementById('fixture');
+    var should = chai.should();
+    var myEl = document.getElementById("fixture");
 
-    suite('<<%= elementName %>>', function() {
+    // the event listener callback will be added / removed in every async test
+    var callback = function() {};
 
-      test('defines the "author" property', function() {
-        assert.equal(myEl.author, 'Dimitri Glazkov');
+    // some input data
+    var input = new Object([{"label":"Marshawn Lynch, RB"},{"label":"Dez Bryant, WR"},{"label":"Jamaal Charles, RB"}]);
+
+    suite("<<%= elementName %>>", function() {
+
+      test("component can be created as an object", function(done) {
+        should.exist(myEl);
+        done();
       });
 
-      test('says hello', function() {
-        assert.equal(myEl.sayHello(), '<%= elementName %> says, Hello World!');
-        var greetings = myEl.sayHello('greetings Earthlings');
-        assert.equal(greetings, '<%= elementName %> says, greetings Earthlings');
-      });
+      test("accepts input", function(done) {
 
-      test('fires lasers', function(done) {
-        myEl.addEventListener('<%= elementName %>-lasers-success', function(event) {
-          assert.equal(event.detail.sound, 'Pew pew pew!');
+        // set the event listener callback
+        myEl.removeEventListener("th-output-ready", callback);
+        callback = function(e) {
+          myEl.input.should.equal(input);
+        };
+        myEl.addEventListener("th-output-ready", callback);
+
+        // change input
+        myEl.input = input;
+
+        // fire th-output-ready event
+        asyncPlatformFlush(function() {
           done();
         });
-        myEl.fireLasers();
+      });
+
+      // repeat as needed
+      test("change an argument, fire outputReady, output new result", function(done) {
+
+        // myEl.removeEventListener("th-output-ready", callback);
+        // callback = function(e) {
+        //   // // check that the argument has been changed
+        //   // myEl.splitCol.should.equal(splitCol);
+
+        //   // // check that the output has been changed
+        //   // var player = myEl.output[0].split1;
+        //   // var pos = myEl.output[0].split2;
+        //   // player.should.equal("Marshawn Lynch");
+        //   // pos.should.equal("RB");
+        // };
+        // myEl.addEventListener("th-output-ready", callback);
+
+        // // change an argument
+        // myEl.splitCol = splitCol;
+
+        // fire th-output-ready event
+        asyncPlatformFlush(function() {
+          done();
+        });
       });
 
     });
+
   </script>
 
 </body>
