tweak componentType templates, demo template, add wct config for testing, tweak bower.json

--- a/seed/templates/_demo.html
+++ b/seed/templates/_demo.html
@@ -5,11 +5,81 @@
     <title><%= elementName %> Demo</title>
     <script src="../webcomponentsjs/webcomponents.js"></script>
     <link rel="import" href="<%= elementName %>.html">
+
+    <style>
+      body {
+        font-family: sans-serif;
+        font-size: 14px;
+      }
+
+      pre {
+        border: 1px solid #EEE;
+        font-size: 12px;
+        max-width: 300px;
+        max-height: 300px;
+        overflow: scroll;
+
+      }
+      #component {
+        border: 1px solid #BBB;
+        margin: 10px;
+        padding: 5px;
+        display: block;
+        width: 300px;
+      }
+
+      .component::before, .component::after {
+        content: '\2794';
+        position: absolute;
+        top: 50%;
+      }
+      .component::before {
+        right: -15px;
+      }
+
+      .component::after {
+        left: -15px;
+      }
+
+      section {
+        display: inline-block;
+        margin: 8px;
+        vertical-align: top;
+        position: relative;
+      }
+      html /deep/ input[is=core-input] {
+        border-bottom: 1px solid #E5E5E5 !important;
+      }
+
+    </style>
+
+    <script>
+      // helper function to stringify and prettify json
+      PolymerExpressions.prototype.json = function(object) {
+        return JSON.stringify(object, undefined, 2);
+      };
+    </script>
+
   </head>
   <body unresolved>
+    <template id="auto-bind-demo" is="auto-binding">
 
-    <p>An example of `<%= elementName %>` looks like this:</p>
-    <<%= elementName %>></<%= elementName %>>
+      <section>
+        <label>Input:</label>
+        <pre id="input">{{myinput | json}}</pre>
+      </section>
 
+
+      <section class="component">
+        <label>An example of <%= elementName %>:</label>
+          <<%= elementName %> id="component" output="{{myoutput}}" ></<%= elementName %>>
+      </section>
+
+      <section>
+        <label>Result:</label>
+        <pre id="output">{{myoutput | json}}</pre>
+      </section>
+
+    </template>
   </body>
 </html>
