--- a/seed/templates/_element-name-transform.html
+++ b/seed/templates/_element-name-transform.html
@@ -1,5 +1,10 @@
 <link rel="import" href="../polymer/polymer.html"> 
 <link rel="import" href="../core-collapse/core-collapse.html">
+<link rel="import" href="../th-theme/th-theme.html"> 
+
+<% if(d3chart){ %>
+<link rel="import" href="../th-d3-chart/th-d3-chart.html"> <% } else if(animated) { %>
+<link rel="import" href="../th-animated/th-animated.html"> <% } %>
 
 <!-- this may soon be removed -->
 <link rel="import" href="../core-icon-button/core-icon-button.html">
@@ -18,9 +23,11 @@ A Thelma component
 @homepage http://<%= ghUser %>.github.io/<%= elementName %>
 -->
 
-<polymer-element name="<%= elementName %>" attributes="input output">
+<polymer-element name="<%= elementName %>" <% if(d3chart){%> extends="th-d3-chart" <% } else if(animated) { %> extends="th-animated" <% } %> attributes="input output">
   <template>
     <link rel="stylesheet" href="<%= elementName %>.css">
+    <core-style ref="theme"></core-style>
+
     <div class="th-container">
       <h1><%= elementName %></h1>
       <template if="{{!included}}">
@@ -64,6 +71,26 @@ A Thelma component
         // You can do setup work in here.
         // More info: http://www.polymer-project.org/docs/polymer/polymer.html#lifecyclemethods
       },
+
+      <% if(d3chart || animated){ %>
+      animate: function(){
+        // Animate is a method inherited from the 'th-animated' Thelma component.
+        // You can include code that animates the element here.
+        // Along with it come two attributes, which can be set to time the animation:
+        //   'animateOnInit': accepts a boolean value; if true, animate() will be called when the component is initialized.
+        //   'animateAfter':  accepts a value representing number of milleseconds; if set, animate() will be called 
+        //                    X milleseconds after the component is initialized. 
+      },
+      reset: function(){
+        // Reset is a method inherited from the 'th-animated' Thelma component.
+        // You can include code that takes the component back to the pre-animated state.
+
+      <% if(d3chart){ %>},
+      resize: function(){
+        // Resize is a callback inherited from the 'th-d3-chart' Thelma component.
+        // It is triggered when the component is resized. 
+        // You can include any size-dependent work here.
+     <% } %> <% } %>},
 
       /**
        *  Toggles whether the settings box is open or closed.
