--- a/seed/templates/_element-name-input.html
+++ b/seed/templates/_element-name-input.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../polymer/polymer.html"> 
-<link rel="import" href="../th-theme/th-theme.html"> 
 <!--
 A Thelma component for input
 
@@ -17,11 +16,10 @@ A Thelma component for input
 <polymer-element name="<%= elementName %>" attributes="output">
 
   <template>
-    <core-style ref="theme"></core-style>
     <link rel="stylesheet" href="<%= elementName %>.css">
     <div class="th-container">
-      <h1><%= elementName %></h1>
-      <content></content>
+	<label class="label">label</label>
+    	<input type="text">		
     </div>
   </template>
   <script>
